[project]
name = "my-cli-tool"
version = "3.0.0"
description = "The ultimate command-line tool for personal and developer automation."
dependencies = [
    "click>=8.0.0",
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "Pillow>=9.0.0",
    "PyPDF2>=3.0.0",
    "speedtest-cli>=2.1.0",
    "boto3>=1.26.0",
    "moviepy>=1.0.3",
    "qrcode[pil]>=7.3.0",
    "newsapi-python>=0.2.6",
    "alpha_vantage>=2.3.1",
    "python-whois>=0.8.0"
]

[project.scripts]
mycli = "main:cli"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]